--- a/src/pages/RidersSignupForm/RidersSignupForm.css
+++ b/src/pages/RidersSignupForm/RidersSignupForm.css
@@ -37,7 +37,7 @@
 
 .logo{
     margin: 20px 0px;
-    width: 50%;
+    width: 35%;
     display: flex;
     align-items: center;
     /* border: 1px solid blue; */
@@ -47,6 +47,7 @@
     color: #E02B45;
     font-size: 20px;
     font-weight: 800;
+    margin-left: 5px;
 }
 
 .logo_image{
@@ -107,9 +108,39 @@
 
 .form_elem input, .form_elem select{
     width: 100%;
-    padding: 10px 8%;
+    padding: 10px 6%;
     font-size: 16px;
-    color: #c4c4c4d3;
+    color: #8a8888;
+    letter-spacing: 1px;
+    border: 1px solid #C4C4C4;
+    font-weight: 400;
+    background: transparent;
+    border-radius: 6px;
+
+}
+
+.form_elem select{
+    padding-right: 10px;
+}
+
+select{
+    position: relative;
+}
+input#file-upload-button{
+    border: none;
+    border-radius: 5px;
+    color: red;
+}
+
+option{
+    position:absolute;
+    top: 50%;
+    left: 0;
+    width: 20%;
+    height: 100%;
+    padding: 10px 6%;
+    font-size: 16px;
+    color: #8a8888;
     letter-spacing: 1px;
     border: 1px solid #C4C4C4;
     font-weight: 400;
@@ -203,6 +234,11 @@ input[type="submit"]{
         width: 100%; 
         height: 90vh;
          object-fit: contain;
+    }
+
+    .form_elem input, .form_elem select{
+        width: 100%;
+        padding: 10px 8%;
     }
 
     .image_container::before{
