--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -42,11 +42,8 @@ flex-direction: column;
 
 .column{
     display: flex;
-    /* flex-wrap: wrap; */
     align-items: center;
-    /* column-gap: 0.5rem; */
     width: 100%;
-    margin-bottom: 2rem;
     max-width: 80%;
     margin: 0 auto;
     text-align: center;
@@ -57,10 +54,10 @@ flex-direction: column;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    max-width: 700px;
+    width: 400px;
+    height: 400px;
     margin: 0 auto;
-    padding: 1rem;
+    padding: 2rem;
     text-align: center;
     border:  2px solid #D9D9D9;
 }
