--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -13,7 +13,6 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    max-width: 1200px;
     margin: 0 auto;
 }
 
@@ -68,9 +67,23 @@ flex-direction: column;
     color: #21334F;
     margin-bottom: 1rem;
 }
-.fill{
-  display: flex;
-  justify-content: center;
-  width: 70%;
-  border: 2px solid black
+
+.qualityriders{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    padding: 30px ;
+    gap: 3rem;
+    background-color: rgba(0, 0, 0, 0.04);
+    width: 100%;
+    height: 30rem;
+    margin: 0 auto;
+}
+
+.riderText{
+    display: flex;
+    flex-direction: column;
+     width: 40%;
+    /* margin: 0 auto; */
 }
