--- a/src/pages/ResetPasswordd/ResetPasswordd.css
+++ b/src/pages/ResetPasswordd/ResetPasswordd.css
@@ -1,16 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
-.register-container {
+.reset-container {
   position: relative;
-  background-color: red;
+  background-color: white;
   width: 100%;
-  overflow: hidden;
-  height: 92vh;
+  height: 100vh;
   display: flex;
 }
 .bg-background {
   display: flex;
   position: relative;
   height: 95vh;
+  width:55%;
 }
 h2{
 position: absolute;
@@ -28,12 +28,17 @@ line-height: 35px;
 }
 
 .form-style {
-  height: 95vh;
-  width: 500px;
-  background-color: white;
-  position: relative;
   display: flex;
-  justify-content: center;
+flex-direction: column;
+align-items: flex-start;
+padding: 0px;
+gap: 80px;
+
+position: absolute;
+width: 396px;
+height: 428px;
+left: 894px;
+top: 85px;
 }
 .form-top{
   display:flex;
@@ -47,7 +52,16 @@ line-height: 35px;
 }
 
 .form-div{
-  margin-top:0%;
+  /* top:20%; */
+  /* left:160px; */
+  width:100%;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  
+  position: relative;
 }
 input {
   padding: 10px;
@@ -105,7 +119,7 @@ p {
 }
 
 .signup-head{
-width: 246px;
+width: 303px;
 height: 24px;
 font-family: 'Inter';
 font-style: normal;
@@ -125,3 +139,6 @@ order: 0;
 flex-grow: 0;
 }
 
+.budylogo{
+  width: 303px;
+}
