--- a/src/pages/SentMail/MailSent.css
+++ b/src/pages/SentMail/MailSent.css
@@ -1,4 +1,4 @@
-.h{
+.sentMail-Container{
     background: #E5E5E5;
     height: 100vh;
     margin:auto;
@@ -7,12 +7,21 @@
 h3 {
     color:black;
     font-size:xx-large;
-    padding-bottom: 2px;
+    padding-bottom: 1px;
     margin-bottom: 10px
 }
 
 p{
     text-align: center;
+}
+
+.sentBtn{
+    background-color: #E02B45;
+    padding: 16px, 24px, 16px, 24px;
+    width: 204px;
+    height: 54px;
+    border: none;
+    margin-bottom: 20px;
 }
 
 .text {
