--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap'); 
-/* :root {
+/* @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap'); 
+:root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
@@ -16,7 +16,7 @@
   -webkit-text-size-adjust: 100%;
 } */
 
-a {
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
@@ -32,10 +32,10 @@ body {
   display: flex;
   background-color: #E5E5E5;
   /* place-items: center; */
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   /* min-width: 320px;
   min-height: 100vh; */
-}
+/* } */ 
 
 /* h1 {
   font-size: 3.2em;
