--- a/src/pages/ForgotPasswordd/ForgotPasswordd.css
+++ b/src/pages/ForgotPasswordd/ForgotPasswordd.css
@@ -1,5 +1,5 @@
 
-h3 {
+/* h3 {
     color:black;
     font-size:xx-large;
     padding-bottom: 2px;
@@ -16,4 +16,4 @@ p{
     display: flex;
     flex-direction: column;
     padding: 15px
-}
+} */
