--- a/src/pages/Register/Register.module.css
+++ b/src/pages/Register/Register.module.css
@@ -53,6 +53,16 @@ margin-bottom: 20px;
  position: relative;
  left:10px;
 font-size:15px;
+
+}
+.swiftLink {
+font-family: 'Inter';
+font-style: normal;
+font-weight: 800;
+font-size: 18px;
+line-height: 22px;
+
+color: #E02B45;
 }
 .rider_top{
   left: 0px;
@@ -62,7 +72,7 @@ width: 80%;
 margin-right: 50px;
 
 }
-input {
+.userReg_input {
   padding: 10px;
   margin-bottom: 10px;
   text-align: left;
