--- a/src/pages/ResetPasswordd/ResetPasswordd.module.css
+++ b/src/pages/ResetPasswordd/ResetPasswordd.module.css
@@ -12,7 +12,7 @@
   height: 95vh;
   width:55%;
 }
-h2{
+/* h2{
 position: absolute;
 width: 370px;
 height: 144px;
@@ -25,7 +25,7 @@ font-size: 35px;
 line-height: 35px;
 
 
-}
+} */
 
 .form_style {
   display: flex;
@@ -43,9 +43,9 @@ top: 85px;
   display:flex;
 }
 
-.swift{
-   display: inline;
-   color: red;
+p.swift{
+  display: inline;
+  color: red;
   font-weight: bold;
   display: flex;
 }
@@ -59,7 +59,7 @@ top: 85px;
   align-items: center;
   position: relative;
 }
-input {
+input.resetPassword_input {
   padding: 10px;
   text-align: left;
   color: black;
@@ -93,9 +93,9 @@ input {
   width: 100%;
   text-decoration: none;
 }
-p {
+/* .budylogo {
   color: black;
-}
+} */
 
 .sign {
   color: red;
@@ -120,7 +120,8 @@ left: 0px;
 display:flex;
 margin-top: 70px;
 width: 80%;
-margin-right: 40%
+margin-right: 40%;
+color: black;
 }
 .input_form{
   margin-left: 35px;
