--- a/src/pages/logins/Login.module.css
+++ b/src/pages/logins/Login.module.css
@@ -18,11 +18,22 @@ body {
   width: 100%;
   font-family: "Inter", sans-serif;
   background-color: white;
-  height: 100vh;
+  /* height: 100vh; */
+
+}
+.loginData_btn {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.login_form_data{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 .loginimg_container{
   position: relative;
-  height: 100vh;
+  /* height: 100vh; */
   background-color: white;
   display: flex;
   width: 50%;
@@ -30,7 +41,7 @@ body {
 .form_style {
   display: flex;
   grid-template-columns: 1fr 1fr;
-  height: 100vh;
+  /* height: 100vh; */
   width: 50%;
   position: relative;
   justify-content: center;
@@ -70,43 +81,66 @@ body {
   text-align: left;
 }
 
-.login_form div {
-  width: 100%;
+.login_form {
+  width: 80%;
   color: #012a4a;
   margin-left: 40px;
   margin-top: 20px;
 }
+.login_form {
+  color: #012a4a;
+  margin-left: 40px;
+  margin-top: 20px;
+}
+
+.login_user_label{
+  /* margin: 10px 5px; */
+  width: 20%;
+}
 .login_label {
   position: relative;
-  left:36px;
+  left:0px;
   margin-top: 50px;
   font-size: 24px;
   color: #012a4a;
   font-size: 30px;
   font-family: Inter;
   font-weight: 7px;
+  width: 90%;
 }
+
+/* .login_form */
+
+.input_content{
+  display: flex;
+  /* justify-content: space-between; */
+}
+
 .create_style {
   color: #e02b45;
 }
-.fpassword {
+.login_fpassword {
   margin-top: 30px;
   color: #4285f4;
   text-align: center;
   display: flex;
   font-size: small;
+  justify-content: center;
+  align-content: center;
 }
 .input_style {
   border-radius: 5px;
   border: 1px solid black;
   text-align: left;
   margin: 10px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding: 10px;
+  /* padding-top: 20px;
+  padding-bottom: 20px; */
   font-family: Inter;
   background-color: #ffffff;
-  width: 400px;
+  width: 70%;
   margin-left: 0px;
+  line-height: 40px;
 }
 .emailId,
 .passwordId,
@@ -153,13 +187,14 @@ body {
 
 .btnReg{
   display: flex;
-  width: 90%;
+  width: 70%;
   justify-content: center;
   padding: 16px 24px;
   background: #e02b45;
   border-radius: 6px;
   border: 1px solid white;
   color: white;
+  margin-left: 20%;
 }
 
 @media  screen and (max-width: 768px) {
