--- a/src/pages/ProfileSetting/ProfileSetting.module.css
+++ b/src/pages/ProfileSetting/ProfileSetting.module.css
@@ -9,15 +9,21 @@ body{
      display: flex;
     flex-direction: column;
     justify-content: center;    
-    align-items: center; 
+    align-items: center;
 }
-.section2{
+.user_profileContainer_datas{
+    background-color: #FFF;
+    margin-top: 120px;
+    display: flex ;
+    flex-direction: column;
+}
+.user_profile_section2{
     display: flex;
     flex-direction: column;
     justify-content: center;  
     align-items: center;
     border: 1px solid #BDBDBD;
-    padding: 1rem
+    padding: 1rem;
 }
 .text{
     color: #BDBDBD;
@@ -83,7 +89,7 @@ input::placeholder{
 .Submit:hover{
     background-color: rgb(197, 77, 77);
 }
-label{
+.user_profile_label{
     color: #21334F;
     margin-top: 20px;
 }
