--- a/src/pages/RidersDashboard/RidersDashboard.module.css
+++ b/src/pages/RidersDashboard/RidersDashboard.module.css
@@ -25,7 +25,8 @@
 .subcontainer{
   background-color: #E5E5E5;
   width: 100%;
-    height: 100%;
+  height: 100%;
+  margin-top: 80px;
 }
 .gridArea{
     display: grid;
@@ -95,6 +96,7 @@
 }
 .ordersCompleted{
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
@@ -103,7 +105,7 @@
     margin-top: 10px;
 }
 .ordersH2{
-    position: absolute;
+    /* position: absolute; */
     top: 250px;
     left: 180px;
     font-size: 15px;
