--- a/src/pages/UserRequestRider/RequestRider.module.css
+++ b/src/pages/UserRequestRider/RequestRider.module.css
@@ -5,7 +5,8 @@
 }
 .requestContainer{
     width: 100%;
-    height: 100vh;
+    /* height: 600px; */
+    margin: auto;
     background-color: #E5E5E5;
     display: flex;
     flex-direction: column;
@@ -15,15 +16,15 @@
 
 .requestFirst{
     width: 50%;
-    height: 95%;
+    height: 70%;
     background-color: #ffffff;
     padding: 20px;
-    margin-top: 120px;
+    margin: 120px;
     display: flex;   
     flex-direction: column;
     justify-content: center; 
     align-items: center; 
-    margin-bottom: 120px;
+    margin-bottom: 150px;
 }
 .requestBtn{
     margin-top: 50px;
@@ -98,7 +99,7 @@
     border-radius: 15px;
     border: none;
     font-weight: 600;
-    margin-top: 120px;
+    margin-top: 50px;
 }
 .requestBtn:hover{
     background-color: #E02B45;
@@ -127,12 +128,14 @@
     .requestFirst{
         width: 90%;
         height: 100%;
-        font-size: 10px;
+        font-size: 20px;
     }
     .requestInput{
-        height: 22px;
+        /* height: 22px; */
+        line-height: 40px;
     }
     .requestSubmit{
-        height: 22px;
+        /* height: 22px; */
+        line-height: 40px;
     }
 }
