--- a/src/pages/userDashboard/userDashboard.module.css
+++ b/src/pages/userDashboard/userDashboard.module.css
@@ -1,10 +1,14 @@
+.user_dashboard_p_div{
+  with: 80%;
+}
 .middle_container {
     background-color: #e5e5e5;
     width: 100%;
     height: 800px;
     position: absolute;
-    margin-top: 5px;
+    margin-top: 80px;
     padding-bottom: 50px;
+    /* z-index: -1; */
     /* display: flex; */
   }
   .second_container {
@@ -246,6 +250,8 @@
   .order_details {
     margin-top: 30px;
     gap: 300px;
+    border-bottom: 1px solid 
+    #E2E2E2;
   }
   .order_stats {
     margin-top: 30px;
