--- a/src/components/RHistoryTable/RHistoryTable.css
+++ b/src/components/RHistoryTable/RHistoryTable.css
@@ -1,9 +1,10 @@
 .datatable {
-  width: 905px;
-  height: 600px;
+  width: 80%;
+  height: 80vh;
   padding: 20px;
+  margin:120px auto auto auto;
+  background: #FFFFFF;
 }
-
 .datatable .datatableTitle {
   width: 100%;
   font-size: 24px;
