--- a/src/pages/Ridermaps/Ridermap.module.css
+++ b/src/pages/Ridermaps/Ridermap.module.css
@@ -1,8 +1,16 @@
+.MPCTN{
+    /* outline: 2px solid red; */
+}
+
 .mapContainer{
+
+    position: absolute;
+    margin-top: 6%;
     display:flex;
     width:100%;
     border-top: 1px solid #c4c4c45a;
-    margin-top: 0px;
+    /* margin-top: px; */
+    /* padding-top: 10px; */
 }
 
 .details{
@@ -48,6 +56,7 @@
     color: #2E405A;
     outline: none;
     font-size: 14px;
+    font-weight: 700;
 }
 
  .divInputCtn input{
@@ -59,6 +68,7 @@
     width: 100%;
     height: 30px;
     border: none;
+    text-align: center;
  }
 
 .divInputCtn input:disabled{
@@ -93,18 +103,31 @@
 
 .btnGroup button{
 border: none;
-margin: 5px 0px;
+/* margin: 5px 0px; */
 padding: 10px 0px;
 transition: 0.3s ease-in-out;
 }
 
-.btnGroup button:nth-child(1){
+.btnGroup button.aceptReq{
     background-color: #E02B45;
     color: white;
 }
+/* .btnGroup button:nth-child(2){
+    display: flex;
+    background-color: #E02B45;
+    color: white;
+} */
 
-.btnGroup button:nth-child(2){
+.btnGroup a, .declineReq{
     background-color: #f5f5f5;
+    color: #000;
+}
+
+.declineReq, .aceptReq{
+    width: 100%;
+    heigth: 100%;
+    /* color: white; */
+    /* backg */
 }
 
 .btnGroup button:hover{
@@ -189,18 +212,32 @@ transition: 0.3s ease-in-out;
 
 }
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 600px){
     .mapContainer{
+        align-content: center;
         flex-direction: column;
         overflow-x: hidden;
+        margin-top: 18% !important;
     }
 
     .details{
-        width: 100%;
-        margin: 0px;
+        width: 90%;
+        /* margin: 0px; */
+        margin: auto;
+        background-color: #FFF;
+        outline: none;
     }
 
     .mapV{
         width: 100%;
+    }
+    .formCtn{
+        width: 70%;
+        align-items: center;
+        margin: auto;
+    }
+    .divInputCtn{
+        width:100%;
+        align-items: center;
     }
 }   
