--- a/src/pages/UserHistory/PickUpUserHistory.module.css
+++ b/src/pages/UserHistory/PickUpUserHistory.module.css
@@ -3,19 +3,26 @@
     padding: 0;
     box-sizing: border-box;
 }
-.mainContainerHistory{
-    background-color: #E5E5E5;
-    height: 100vh;
+
+.user_history_parent_div{
+    height: auto;
+    /* background-color: #FFF; */
+    width: 80%;
+    display: flex;
+    margin: auto;
+    /* position: absolute; */
+
 }
 .containerHistory{
-    margin:40px auto;
-    height:60% ;
-    width:70%;
+    margin: 10% auto;
+    /* margin-top: 120px auto; */
+    display: flex;
+    flex-direction: column;
+    height:70vh ;
+    width:100%;
     background-color:#FFFF;
     border: 1px ;
     padding: 20px 0px;
-    
-   
 }
 .riderPickupHistory{
     display:flex;
@@ -91,15 +98,24 @@
     color:green
   }
 
-@media only screen and (max-width:600px) {
+@media only screen and (max-width:900px) {
     .locationHistory{
-        width: 100%;
-
+        /* width: 100%; */
+        overflow-x: scroll;
+        width: 800px;
     }
     .locationHistory h4 {
         width : 20px;
     }
     .containerHistory {
-        width: 100%;
+        /* width: 100%; */
+        height: 90vh;
+        margin: 30% auto 5% auto;
+        overflow-x: scroll;
+        width: 800px;
+    }
+    .user_history_parent_div{
+        /* overflow-x: scroll;
+        width: 800px; */
     }
 }
