--- a/src/pages/UserRequestRider/RequestRider.module.css
+++ b/src/pages/UserRequestRider/RequestRider.module.css
@@ -6,20 +6,25 @@
 .requestContainer{
     width: 100%;
     /* height: 600px; */
-    margin: auto;
+    position: absolute;
+    height: 90vh;
+    margin: 12% auto 12% auto;
     background-color: #E5E5E5;
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* margin-top: 12%; */
     justify-content: center;
 }
 
 .requestFirst{
+    position: relative;
+    /* margin-top: 100px; */
     width: 50%;
-    height: 70%;
+    height: 90vh;
     background-color: #ffffff;
     padding: 20px;
-    margin: 120px;
+    margin: auto;
     display: flex;   
     flex-direction: column;
     justify-content: center; 
@@ -127,7 +132,7 @@
     }
     .requestFirst{
         width: 90%;
-        height: 100%;
+        height: 100vh;
         font-size: 20px;
     }
     .requestInput{
@@ -137,5 +142,9 @@
     .requestSubmit{
         /* height: 22px; */
         line-height: 40px;
+    }
+    .requestContainer{
+        margin-top: 40%;
+        height: 95vh;
     }
 }
