--- a/src/pages/Ridermaps/Ridermap.module.css
+++ b/src/pages/Ridermaps/Ridermap.module.css
@@ -1,16 +1,16 @@
 .MPCTN{
-    /* outline: 2px solid red; */
-}
+        position: relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    }
 
 .mapContainer{
-
-    position: absolute;
-    margin-top: 6%;
     display:flex;
     width:100%;
-    border-top: 1px solid #c4c4c45a;
-    /* margin-top: px; */
-    /* padding-top: 10px; */
+    /* border-top: 1px solid #c4c4c45a; */
+    position: absolute;
+    bottom: 0px;
 }
 
 .details{
@@ -33,14 +33,15 @@
     left: 0;
     padding: 10px;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: left;
+    align-items: flex-start;
 }
 
 .formCtn{
     display: flex;
     flex-direction: column;
     margin-top: 15px;
+    gap: 10px;
 }
 
 .divInputCtn{
@@ -68,7 +69,6 @@
     width: 100%;
     height: 30px;
     border: none;
-    text-align: center;
  }
 
 .divInputCtn input:disabled{
@@ -103,7 +103,6 @@
 
 .btnGroup button{
 border: none;
-/* margin: 5px 0px; */
 padding: 10px 0px;
 transition: 0.3s ease-in-out;
 }
@@ -112,12 +111,7 @@ transition: 0.3s ease-in-out;
     background-color: #E02B45;
     color: white;
 }
-/* .btnGroup button:nth-child(2){
-    display: flex;
-    background-color: #E02B45;
-    color: white;
-} */
-
+            
 .btnGroup a, .declineReq{
     background-color: #f5f5f5;
     color: #000;
@@ -126,9 +120,7 @@ transition: 0.3s ease-in-out;
 .declineReq, .aceptReq{
     width: 100%;
     heigth: 100%;
-    /* color: white; */
-    /* backg */
-}
+        }
 
 .btnGroup button:hover{
     cursor: pointer;
@@ -141,9 +133,10 @@ transition: 0.3s ease-in-out;
     width: 250px;
     height: 150px;
     position: absolute;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.813);
     box-sizing: border-box;
     border-radius: 0px 0px 10px 10px;
+    margin: 20px 0px 0px 20px;
 }
 
 .incomingRequest p{
@@ -164,7 +157,7 @@ transition: 0.3s ease-in-out;
 
 
 .incomingRequest p:nth-child(2){
-    font-size: 1.2rem;
+    font-size: 1.1rem;
 }
 
 .incomingRequestInnerP{
@@ -174,12 +167,12 @@ transition: 0.3s ease-in-out;
 }
 
 .innerPMedium{
-    font-size: 10px;
+    font-size: 12px;
     font-weight: bolder;
 }
 
 .innerPSmall{
-    font-size: 10px;
+    font-size: 12px;
 }
 
 .endtrip{
@@ -212,32 +205,28 @@ transition: 0.3s ease-in-out;
 
 }
 
-@media screen and (max-width: 600px){
+@media screen and (max-width: 768px){
     .mapContainer{
-        align-content: center;
         flex-direction: column;
+        position: relative;
+        margin-top: 80px;
         overflow-x: hidden;
-        margin-top: 18% !important;
+        border-top: 1px solid #F00;
+        background:#FFF;
     }
 
     .details{
-        width: 90%;
-        /* margin: 0px; */
+        width: 80%;
+        margin: 0px;
+        justify-content: center;
         margin: auto;
-        background-color: #FFF;
-        outline: none;
     }
 
     .mapV{
         width: 100%;
     }
-    .formCtn{
-        width: 70%;
-        align-items: center;
-        margin: auto;
-    }
-    .divInputCtn{
-        width:100%;
-        align-items: center;
+
+    .MPCTN{
+        position: relative;
     }
 }   
