--- a/src/pages/RidersSignupForm /RidersSignupForm.module.css
+++ b/src/pages/RidersSignupForm /RidersSignupForm.module.css
@@ -10,6 +10,7 @@
     position: relative;
     width: 100%;
     display: flex; 
+    background-color: #fff;
 }
 .image_container{
     position: relative;
