corrected a spelling error in ridermap css

--- a/src/pages/Ridermaps/Ridermap.module.css
+++ b/src/pages/Ridermaps/Ridermap.module.css
@@ -119,7 +119,7 @@ transition: 0.3s ease-in-out;
 
 .declineReq, .aceptReq{
     width: 100%;
-    heigth: 100%;
+    height: 100%;
         }
 
 .btnGroup button:hover{
