--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -20,6 +20,11 @@ body{
   object-fit: cover;
 }
 
+.HomeCpntCtner{
+  position: relative;
+  top: 80px;
+}
+
 .imageOverlay {
   position: absolute;
   top: 0;
