--- a/src/components/RiderProfileSettings/updateRiderProfile.module.css
+++ b/src/components/RiderProfileSettings/updateRiderProfile.module.css
@@ -110,3 +110,83 @@ background-color: #e02b45;
   margin-top: 30px;
   margin-bottom: 20px;
 }
+
+/* Mobile and Tablet Screens */
+@media (max-width: 768px) {
+    /* Adjust font-size on smaller screens */
+    .rider_profile_form{
+        width: 550px;
+        height: auto;
+    }
+    .rider_profile_title2 {
+        font-size: 1rem;
+    }
+    .rider_profile_viewer {
+        font-size: 2rem;
+    }
+
+    /* Make input field take up full width on smaller screens */
+    input.rider_profile_userProfile {
+        width: 100%;
+    }
+
+    /* Change position of icon on smaller screens */
+    .rider_profile_icon1 {
+        position: relative;
+        left: auto;
+    }
+
+    /* Reduce margins and padding on smaller screens */
+    .rider_profile_user_profileContainer_datas {
+        margin-top: 150px;
+    }
+    .rider_profile_user_profile_section2 {
+        padding: 0.5rem;
+    }
+    .rider_profile_btn_container{
+        width: 100%;
+        margin-left: 0;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    body{
+        width: 100%;
+        height: 100%;
+    }
+    .rider_profile_userProfile {
+      width: 100%;
+    }
+    .rider_profile_userProfile_input {
+      position: relative;
+    }
+    .rider_profile_user_profile_section2{
+        padding: 0.5rem;
+        margin-top: 10px;
+        width: 100%;
+    }
+    .rider_profile_form{
+        width: 350px;
+        height: auto;
+      
+       
+
+    }
+    .rider_profile_view{
+        text-align: center;
+        margin-top: 0;
+    }
+    .rider_profile_icon1 {
+      position: relative;
+      top: 0;
+      left: 0;
+    }
+    .rider_profile_user_profileContainer_datas {
+      margin-top: 130px;
+
+    }
+    .rider_profile_btn_container{
+        width: 100%;
+        margin-left: 0;
+    }
+  }
