--- a/src/pages/RiderBiddingOrder/RiderBiddingOrder.module.css
+++ b/src/pages/RiderBiddingOrder/RiderBiddingOrder.module.css
@@ -95,7 +95,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 .biding_order_content_data{
     width: 30%;
