--- a/src/pages/UserRequestRider/RequestRider.module.css
+++ b/src/pages/UserRequestRider/RequestRider.module.css
@@ -7,7 +7,7 @@
     width: 100%;
     /* height: 600px; */
     position: absolute;
-    height: 90vh;
+    height: auto;
     margin: 12% auto 12% auto;
     background-color: #E5E5E5;
     display: flex;
@@ -21,7 +21,7 @@
     position: relative;
     /* margin-top: 100px; */
     width: 50%;
-    height: 90vh;
+    height: 900px;
     background-color: #ffffff;
     padding: 20px;
     margin: auto;
@@ -148,3 +148,8 @@
         height: 95vh;
     }
 }
+
+
+
+
+
