--- a/src/pages/UserRequestRider/Modal2.module.css
+++ b/src/pages/UserRequestRider/Modal2.module.css
@@ -19,8 +19,33 @@ body.active-modal {
     position: fixed;
 }
 
+.modal1 {
+    width: 100vw;
+    height: 100vh;
+    top: 90px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: fixed;
+}
+
+.overlayy {
+    background: rgba(49,49,49,0.8);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+}
+
 .overlay {
     background: rgba(49,49,49,0.8);
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
 }
 .modal_content {
     position: absolute;
@@ -66,10 +91,32 @@ body.active-modal {
     margin-right: 18px;
     cursor: pointer;
 }
+
+.close_modal1 {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+
+    padding: 5px;
+
+    cursor: pointer;
+    background: #f1f1f1;
+    border: 1px solid #ccc;;
+}
+
+.close_modal1:hover {
+background: rgba(238, 84, 84, 0.4);
+}
+ 
+    
+
+
+
 .close_modal:hover {
     position: absolute;
-    background-color: rgba(224, 43, 69, 0.1) ;
+    background-color: rgba(235, 14, 48, 0.1) ;
     cursor: pointer;
+    border: none;
 }
 
 
@@ -161,7 +208,7 @@ body.active-modal {
 .modalBtn1{
     background-color:rgba(224, 43, 69, 0.1) ;
     padding: 17px;
-    width: 390px;
+    width: 370px;
     border: none;
     font-size: 20px;
     font-weight: 700 ;
@@ -169,7 +216,7 @@ body.active-modal {
     cursor: pointer;
 }
 .modalBtn3{
-    background-color:rgba(224, 43, 69, 0.1) ;
+    background-color:rgba(227, 27, 57, 0.1) ;
     padding: 17px;
     width: 145px;
     border: none;
@@ -182,7 +229,7 @@ body.active-modal {
 .modalBtn1:hover{
     background-color: red;
     padding: 17px;
-    width: 390px;
+    width: 370px;
     border: none;
     color: white;
     cursor: pointer;
