--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -2,11 +2,17 @@
   display: flex;
   width: 100%;
   height: 100vh;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin: auto;
 
 }
 .login_form {
   width: 45%;
   display: flex;
+  justify-content: center;
   flex-direction: column;
   height: 80vh;
   background: #E5E5E5;
@@ -41,25 +47,22 @@ color: #E02B45;
 .login_form_title {
   text-align: start;
   font-family: 'Inter';
-font-style: normal;
-font-weight: 700;
-font-size: 24px;
-line-height: 24px;
-/* identical to box height, or 100% */
-
-
-color: #012A4A;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 24px;
+  color: #012A4A;
+  margin-bottom: 20px;
 }
 .login_form_data_content {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    padding: 0 50px;
+    padding: auto;
     height: 100vh;
     position: relative;
-    width: 70%;
-    margin: auto auto auto 50px;
+    margin: auto auto auto auto;
 }
 .login_section_h1 {
   position: absolute;
@@ -102,14 +105,13 @@ color: #FFFFFF;
   width: 85%;
 }
 .login_form_s_input {
-  display: flex;
+display: flex;
 flex-direction: row;
 justify-content: center;
 align-items: center;
 padding: 16px 24px;
 gap: 16px;
-
-width: 300px;
+width: 300px !important;
 height: 48px;
 color : #fff;
 font-family: 'Inter';
@@ -207,6 +209,15 @@ flex-grow: 0;
     right: -100%;
     background: #222831;
   }
+  .login_form_input{
+    width: 100%;
+  }
+  .login_form_s_input{
+    width: 100% !important;
+  }
+  .login_form_p{
+    width: 100%;
+  }
 
   .login_navlinks li, .login_navlinks1 li {
     display: block;
@@ -234,7 +245,9 @@ flex-grow: 0;
     margin-left: 10px;
     font-size: 25px;
   }
-
+  .login_form_p{
+    width: 100%;
+  }
   .login_menu-btn {
     margin-right: 10px;
     font-size: 25px;
@@ -254,8 +267,12 @@ flex-grow: 0;
   .login_form {
     width: 100%;
     height: 70vh;
+    
   }
   .login_f_section{
     height: 80vh;
+  }
+  .login_form_s_input{
+    width: 100% !important;
   }
 }
