--- a/src/pages/UserRequestRider/RequestRider.module.css
+++ b/src/pages/UserRequestRider/RequestRider.module.css
@@ -5,9 +5,9 @@
 }
 .requestContainer{
     width: 100%;
-    /* height: 600px; */
+    height: auto;
     position: absolute;
-    height: 90vh;
+    height: auto;
     margin: 12% auto 12% auto;
     background-color: #E5E5E5;
     display: flex;
@@ -21,7 +21,9 @@
     position: relative;
     /* margin-top: 100px; */
     width: 50%;
-    height: 90vh;
+    height: auto;
+    z-index: 2;
+    border-radius: 20px;
     background-color: #ffffff;
     padding: 20px;
     margin: auto;
@@ -29,19 +31,30 @@
     flex-direction: column;
     justify-content: center; 
     align-items: center; 
-    margin-bottom: 150px;
+    margin-bottom: 5%;
+}
+.request_header {
+    display: flex;
+    justify-content: space-between;
+    width:90%;
+    border-bottom: 2px solid #e2e2e2;
+    padding: 5px;
 }
 .requestBtn{
-    margin-top: 50px;
-    margin-right: 90%;
-    padding: 4px;
+    border-radius: 15px;
+    border: none;
+    font-weight: 600;
+    background-color: #E5E5E5;
+    padding: 10px;
 }
 .requestTitle{
-    margin-bottom: 30px;
     color: #21334F;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
+    width: 60%;
+    padding: 10px;
+    text-align: start;
     font-size: 27px;
     line-height: 19px;
 }
@@ -61,6 +74,29 @@
 }
 .requestInput::placeholder{
     color: #C4C4C4;
+}
+.req_order_form_dv {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.req_order_form_data {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    /* justify-content: space-between; */
+    /* flex-direction: column; */
+}
+.req_order_form_pay {
+    /* width:40%; */
+    display: flex;
+}
+.req_order_form_pay input {
+    margin-left: 20px;
+    height: 30px;
+    width: 30px;
+    opacity: 0.55;
+    cursor: pointer;
 }
 /* .requestSubmit{
     color: #ffffff;
@@ -82,9 +118,12 @@
     width: 80%;
     margin-bottom: 10px;
     padding: 10px;
+    color: rgba(23, 20, 20, 0.763);
+    font-size: 16px;
+    font-weight: 400 normal;
     border: 2px solid #F8F8F8;
     display: block;
-    height: 47px;
+    line-height: 18px;
 }
 .requestOutput{
    width: 50%;
@@ -96,44 +135,67 @@
     align-items: center;
   
 }
+.requestInputAutoCplt{
+    width: 80%;
+    margin-bottom: 10px;
+    padding: 10px;
+    border: 2px solid #F8F8F8;
+    display: block;
+    color: rgba(23, 20, 20, 0.763);
+    font-size: 16px;
+    font-weight: 400 normal;
+    line-height: 18px;
+}
+.requestInputAutoCplt::placeholder{
+    color: #C4C4C4;
+}
 .requestLink{
     text-decoration: none;
 }
-.requestBtn{
-    padding: 10px;
-    border-radius: 15px;
-    border: none;
-    font-weight: 600;
-    margin-top: 50px;
-}
+
 .requestBtn:hover{
     background-color: #E02B45;
     color: #ffffff;
     font-weight: 600;
 }
 .requestFirstLeft{
-    margin-bottom: 120px;
+    margin-top: 5%;
+    /* margin-bottom: 120px; */
     display: flex;
     flex-direction: column;
     width: 80%;
-    height: 100%;
+    height: auto;
+    
 }
 .userOrder_f {
-    height: 100%;
+    height: auto;
     display: flex;
     flex-direction: column;
     width: 100%;
     align-items: center;
 }
-
-@media only screen and (max-width:768px){
+@media only screen and (max-width:900px) {
+    .requestFirst {
+        width: 80%;
+        font-size: 1.5rem;
+    }
+    .requestContainer{
+        /* margin-top: 20%; */
+        margin: 20% auto auto auto;
+        height: auto;
+    }
+    .requestLabel{
+        font-size: 14px;
+    }
+}
+@media only screen and (max-width:465px){
     .requestFirstLeft{
         width: 100%;
     }
     .requestFirst{
         width: 90%;
-        height: 100vh;
-        font-size: 20px;
+        height: auto;
+        font-size: 16px;
     }
     .requestInput{
         /* height: 22px; */
@@ -144,7 +206,19 @@
         line-height: 40px;
     }
     .requestContainer{
-        margin-top: 40%;
-        height: 95vh;
+        /* margin-top: 20%; */
+        margin: 20% auto auto auto;
+        height: auto;
+    }
+    .requestFirst {
+        width: 80%;
+    }
+    .requestTitle{
+        font-size: 14px;
+        display: flex;
+        align-items: center;
+    }
+    .requestBtn{
+        height: 42px;
     }
 }
