--- a/src/pages/userDashboard/userDashboard.module.css
+++ b/src/pages/userDashboard/userDashboard.module.css
@@ -1,89 +1,115 @@
+body {
+  background-color: #E5E5E5;
+  width: 100vw !important;
+  padding: 0;
+  margin: 0;
+}
+
 .user_dashboard_p_div{
-  width: 80%;
+  width: 100%;
+  margin: auto;
+}
+*{
+  padding: 0%;
+  margin: 0%;
 }
 .middle_container {
     background-color: #e5e5e5;
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     position: absolute;
+    flex-direction: column;
     /* margin-top: 5px; */
-    margin: 20px auto 20px auto;
-    padding-bottom: 50px;
+    margin: 5% 5% 20px 5%;
+    /* padding-bottom: 50px; */
     /* z-index: -1; */
     /* display: flex; */
+  }
+
+  .userD_main_container{
+    display: grid;
+    width: 100%;
+    grid-template-columns: 1fr 1fr;
+    justify-content: space-between;
+    position: relative;
+    gap: 10;
+    margin: auto;
+    margin-bottom: 5%;
   }
   .second_container {
     display: flex;
     flex-direction: column;
   }
   .viewoverH1 {
-    gap: 20px;
-    margin-left: 190px;
-    margin-top: 30px;
-    width: 113px;
-    height: 10px;
+    position: relative;
+    margin: 3% auto auto 3%;
+    padding-right:auto;
+    width: 100%;
     font-family: "Inter";
     font-style: normal;
     font-weight: 600;
     font-size: 24px;
-    line-height: 29px;
+    /* line-height: 29px; */
     color: #21334f;
-    /* flex: none; */
-    order: 1;
-    flex-grow: 0;
     display: flex;
   }
   .orders_container {
-    margin-left: 170px;
-    position: absolute;
-    width: 548px;
-    height: 220px;
-    left: 0px;
-    top: 100px;
+    position: relative;
+    height: 250px;
+    margin: 3% 3% 5px 3%;
     background: #ffffff;
-    border-radius: 24px;
+    border-radius: 15px 15px 15px 15px;
   }
   .top_orders {
     background: #ffffff;
     display: flex;
-    gap: 250px;
-    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: auto;
     border-radius: 24px;
   }
   .bottom_orders {
-    margin-left: 30px;
-    margin-top: 50px;
+    /* margin-left: 30px; */
+    /* margin-top: 50px; */
+    height: 150px;
+    margin: 3%;
     background: #ffffff;
     display: flex;
-    gap: 250px;
+    justify-content: space-between;
+    /* gap: 250px; */
     flex-direction: row;
     border-radius: 24px;
   }
+
+  .bt_orders_span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50% !important;
+    /* align-items: center; */
+  }
+
   #orders {
     margin-left: 20px;
     width: 120px;
-    height: 19px;
     font-family: "Inter";
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
     line-height: 19px;
     color: #21334f;
-    margin-top: 20px;
+    margin-top: 10px;
   }
   #request {
-    color: #e02b45;
-    margin-top: 30px;
+    /* margin-top: 30px; */
+    display: flex;
     justify-content: center;
     align-items: center;
-    padding: 8px;
-    /* gap: 10px; */
-    width: 123px;
-    height: 33px;
-    background: rgba(224, 43, 69, 0.1);
+    padding: 10px;
+    margin-right: 25px;
     border-radius: 4px;
     /* width: 107px; */
     /* height: 17px; */
@@ -91,16 +117,11 @@
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
-    line-height: 17px;
+    /* line-height: 17px; */
   }
-  #request:hover {
-    background: red;
-    color: white;
-    cursor: pointer;
-  }
-  hr {
+  .middle_container hr {
     position: absolute;
-    width: 548px;
+    width: 100%;
     height: 0px;
     left: 0px;
     top: 63px;
@@ -117,10 +138,11 @@
     background: rgba(0, 0, 0, 0.04);
     width: 72px;
     height: 72px;
+    display: block;
+    display: flex;
     justify-content: center;
     align-items: center;
-    padding-left: 10px;
-    padding-top: 10px;
+    padding: auto;
   }
   #order_number {
     width: 81px;
@@ -143,14 +165,14 @@
     color: #21334f;
   }
   .messages_container {
-    margin-left: 800px;
-    position: absolute;
-    width: 548px;
-    height: 350px;
-    left: 0px;
-    top: 100px;
+    /* margin-left: 800px; */
+    position: relative;
+    height: 300px;
+    margin: 3%;
+    /* left: 0px; */
+    /* top: 100px; */
     background: #ffffff;
-    border-radius: 24px;
+    border-radius: 15px 15px 15px 15px;
   }
   #messages {
     width: 81px;
@@ -165,7 +187,7 @@
     color: #21334f;
   }
   #msg1 {
-    /* position:relative; */
+    position:relative;
     margin-left: 20px;
     margin-top: 60px;
     display: inline-block;
@@ -179,10 +201,11 @@
   }
   #msgP {
     color: #21334f;
-    margin-top: 80px;
+    margin-top: 20px;
   }
   #msgP2 {
-    width: 298px;
+    text-align: justify;
+    padding: 5px;
     height: 19px;
     font-family: "Inter";
     font-style: normal;
@@ -197,7 +220,7 @@
     text-align: center;
     justify-content: center;
     align-items: center;
-    margin-top: -30px;
+    margin-bottom: 30px;
   }
   #image_div {
     /* display: flex;
@@ -207,59 +230,49 @@
     align-items: center;
   }
   .myorders_container {
-    margin-top: 260px;
-    margin-left: 170px;
-    position: absolute;
-    padding-bottom: 70px;
-    width: 548px;
-    /* height: 10; */
-    left: 0px;
-    top: 100px;
-    border-radius: 24px;
+    position: relative;
+    max-height: auto !important;
+    margin: 3%;
+    border-radius: 15px 15px 15px 15px;
     background: #ffffff;
-    /* display: flex; */
-    /* flex-direction: row; */
-    /* gap: 200px; */
+    display: flex;
     flex-direction: column;
-    border-radius: 24px;
   }
   .seeAll {
     width: 51px;
     height: 19px;
-    left: 463px;
-    top: 30px;
     font-family: "Inter";
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 19px;
     color: #e02b45;
-    margin-top: 20px;
-    margin-left: 360px;
   }
   #orderzz {
     width: 82px;
     height: 19px;
-    left: 30px;
-    top: 30px;
     font-family: "Inter";
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
     line-height: 19px;
     color: #21334f;
-    margin-top: 20px;
-    margin-left: 20px;
   }
   .order_details {
+    display: flex;
     margin-top: 30px;
-    gap: 300px;
-    border-bottom: 1px solid 
-    #E2E2E2;
+    padding: 10px;
+    align-items: center;
+    justify-content: space-between;
+    /* gap: 300px; */
   }
   .order_stats {
     margin-top: 30px;
     margin-left: 20px;
+  }
+  .order_status_title{
+    display: flex;
+    justify-content: space-between;
   }
   .date {
     width: 200px;
@@ -273,19 +286,16 @@
     display: inline-block;
   }
   .status {
-    /* display: flex;
-  flex-direction: column; */
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 8px;
-    /* gap: 10px; */
-    width: 100px;
+    padding: 15px;
+    /* margin: auto; */
     height: 28px;
+    margin-right: 3%;
     background: rgba(252, 193, 52, 0.1);
     border-radius: 100px;
-    margin-left: 215px;
-    /* font-size: 54px; */
-    /* height: 17px; */
     font-family: "Inter";
     font-style: normal;
     font-weight: 400;
@@ -296,7 +306,7 @@
   .orderNo {
     width: 161px;
     height: 17px;
-    margin-top: 400px;
+    /* margin-top: 400px; */
     font-family: "Inter";
     font-style: normal;
     font-weight: 400;
@@ -315,10 +325,11 @@
     line-height: 17px;
     /* identical to box height */
     color: #21334f;
-    margin-left: 280px;
+    margin-right: 2px;
   }
   .space {
-    margin-top: 300px;
+    display: flex;
+    justify-content: space-between;
   }
 
   .contact_details_link > a{
@@ -327,30 +338,16 @@
 }
 
   .contacts_container {
-    margin-top: 400px;
-    margin-left: 800px;
-    position: absolute;
-    padding-bottom: 30px;
-    width: 548px;
-    /* height: 10; */
-    left: 0px;
-    top: 100px;
+    position: relative;
+    margin: 12% 3% 3% 3%;
     border-radius: 24px;
     background: #ffffff;
-    /* display: flex; */
-    /* flex-direction: row; */
-    /* gap: 200px; */
-    height: 260px;
+    display: flex;
+    height: 300px;
     flex-direction: column;
-    border-radius: 24px;
-    /* transform: matrix(1, 0, 0, -1, 0, 0); */
+    border-radius: 15px 15px 15px 15px;
   }
   .contact {
-    position: absolute;
-    width: 88px;
-    height: 19px;
-    left: 30px;
-    top: 30px;
     font-family: "Inter";
     font-style: normal;
     font-weight: 700;
@@ -358,13 +355,31 @@
     line-height: 19px;
     color: #21334f;
   }
+  .contacts_parag {
+    display: flex;
+    justify-content: flex-start;
+    margin-left: 3%;
+    /* position: relative; */
+    margin-top: 30px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+
+color: #21334F;
+  }
   .bio {
-    margin-top: 80px;
+    position: absolute;
+    bottom: 0;
+    margin-top: 20px;
+    display: flex;
+    margin-left: 3%;
+    flex-direction: column;
+    justify-content: center;
   }
   #getInTouch {
-    margin-left: 20px;
-    width: 139px;
-    height: 29px;
+    display: flex;
     font-family: "Inter";
     font-style: normal;
     font-weight: 600;
@@ -373,16 +388,18 @@
     color: #21334f;
   }
   #questions {
-    margin-top: 8px;
-    margin-left: 0px;
-    width: 350px;
-    height: 17px;
     font-family: "Inter";
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
     color: #c4c4c4;
+  }
+  .contact_mail_phone{
+    /* position: absolute; */
+    bottom: 25px;
+    display: flex;
+    flex-direction: column;
   }
   #contact_details1 {
     margin-top: 13px;
@@ -424,40 +441,60 @@
     color: #21334f;
   }
   .company_contacts {
+    /* padding: 10px; */
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
     display: flex;
-    flex-direction: column;
-    padding-left: 90px;
+
+    /* margin-left: 20px; */
+    margin-top: 20px;
+/* identical to box height */
+    color: #21334F;
+
+  }
+  .company_contacts a {
+    text-decoration: none;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+/* identical to box height */
+
+
+color: #21334F;
   }
   .contactUs_images1 {
-    margin-top: 130px;
-    position: absolute;
-    left: 1.56%;
-    right: 1.56%;
-    top: 14.72%;
-    bottom: 14.72%;
+    width: 19.5px;
+    height: 17.29px;
+    padding-right: 7px;
+    /* bottom: 14.72%; */
   }
   .contactUs_images2 {
-    margin-top: 160px;
-    position: absolute;
-    left: 1.56%;
-    right: 1.56%;
-    top: 14.72%;
-    bottom: 14.72%;
+    width: 19.5px;
+    height: 17.29px;
+    padding-right: 7px;
   }
   .contactUs_images3 {
-    margin-top: 190px;
-    position: absolute;
-    left: 1.56%;
-    right: 1.56%;
-    top: 14.72%;
-    bottom: 14.72%;
+    width: 19.5px;
+    height: 17.29px;
+    padding-right: 7px;
   }
   .userDashboardLink{
     text-decoration: none;
-    margin-top: 20px;
+    margin-top: 10px;
+    background: rgba(224, 43, 69, 0.1);
+  }
+  .userDashboardLink span:hover{
+      background: rgb(189, 125, 125);
+      color: rgb(218, 209, 209) !important;
+      cursor: pointer;
   }
   .para{
-    margin-bottom: 50px;
+    margin:auto;
   }
   *{
         margin:0;
@@ -467,3 +504,37 @@
   /* .contacts_holder{
       margin-left:50px;
   } */
+
+  @media only screen and (max-width:468px){
+    .userD_main_container{
+      grid-template-columns: auto;
+    }
+    .middle_container{
+      width: 10%;
+    }
+    .userD_main_container{
+      width: 70%;
+    }
+    .viewoverH1{
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+  @media only screen and (max-width:900px){
+    .userD_main_container{
+      display: flex;
+      flex-direction: column;
+      width: 80%;
+      margin: auto;
+    }
+    .middle_container{
+      width: 100%;
+      margin: 15% auto auto auto;
+    }
+    .viewoverH1 {
+      width: 80%;
+      justify-content: center;
+      align-items: center;
+    }
+  }
