--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -1,261 +1,151 @@
-.login_form_data_container{
-  display: flex;
-  width: 100%;
-  height: 100vh;
-
-}
-.login_form {
-  width: 45%;
-  display: flex;
-  flex-direction: column;
-  height: 80vh;
-  background: #E5E5E5;
-}
-.login_f_section {
-  width: 100%;
-}
-.login_logo_div{
-  width: 10%;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  /* margin: auto; */
-  margin-left: 50px;
-}
-.login_form_logo {
-  display: flex;
-  padding: 50px;
-  align-items: justify;
-font-family: 'Inter';
-font-style: normal;
-font-weight: 800;
-font-size: 18px;
-line-height: 22px;
-
-color: #E02B45;
-
-}
-.login_form_logo span {
-  margin-left: 5px;
-}
-.login_form_title {
-  text-align: start;
-  font-family: 'Inter';
-font-style: normal;
-font-weight: 700;
-font-size: 24px;
-line-height: 24px;
-/* identical to box height, or 100% */
-
-
-color: #012A4A;
-}
-.login_form_data_content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    padding: 0 50px;
-    height: 100vh;
-    position: relative;
-    width: 70%;
-    margin: auto auto auto 50px;
-}
-.login_section_h1 {
-  position: absolute;
-width: 474px;
-height: 144px;
-left: 50px;
-top: 530px;
-
-font-family: 'Inter';
-font-style: normal;
-font-weight: 700;
-font-size: 40px;
-line-height: 48px;
-/* background-color: #E02B45; */
-
-color: #FFFFFF;
-}
-.login_form_image{
-  /* background-image: url("./image.png"); */
-  background-size: cover;
-  top: 0;
-  left: 0;
-  width: 55%;
-  height: 100%;
-  position: relative;
-}
-.login_form_image img{
-  background-size: contain;
-  width: 100%;
-  height: 100vh;
-}
 .login_f_section{
+  display: flex;
   height: 100vh;
-  /* background-color: #f00; */
-  position: absolute;
-  /* height: 50px; */
-  
 }
-.login_form_label, .login_form_input {
-  width: 85%;
-}
-.login_form_s_input {
+
+.login_form_data_container{
+  background-image:url("../../assets/Users_dashboard/Parcel-Delivery-Service.jpeg");
+  background-size: cover;
   display: flex;
-flex-direction: row;
-justify-content: center;
-align-items: center;
-padding: 16px 24px;
-gap: 16px;
-
-width: 300px;
-height: 48px;
-color : #fff;
-font-family: 'Inter';
-font-style: normal;
-font-weight: 600;
-font-size: 16px;
-line-height: 19px;
-text-align: center;
-
-color: #FFFFFF;
-background: #E02B45;
-border-radius: 6px;
 }
-.login_form_input {
+
+.login_form_image{
   display: flex;
-flex-direction: row;
-align-items: center;
-padding: 9px 16px 8px;
-gap: 16px;
-
-width: 300px;
-height: 48px;
-
-background: #FFFFFF;
-opacity: 0.login_8;
-border: 1px solid #012A4A;
-border-radius: 6px;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: flex-end;
+  background: linear-gradient(to right, #211c1c4d, #57524a32) 
 }
+
+.login_section_h1{
+  color: #fff;
+  margin:0px 0px 50px 20px;
+}
+
+.login_form_ctainer{
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+.login_form_ctainer_innerDiv{
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 80%;
+  height: 80vh;
+
+}
+
+.login_form_ctainer,.login_form_data_container{
+  width: 50%;
+}
+
+.login_form{
+
+  width: 80%;
+  height: 65vh;
+}
+
+.login_logo_div{
+  width: fit-content;
+}
+
+.login_form_logo{
+  display: flex;
+  align-items: center;
+  width: fit-content;
+
+
+}
+
+.login_form_logo span{
+  color: #E02B45;
+}
+
+.login_form_title{
+  margin-bottom: 20px;
+}
+
+.login_form_label_ctn{
+  height: 50vh;
+}
+
+.login_form_fieldctn{
+  display: flex;
+  flex-direction: column;
+}
+
+.login_form_fieldctn b{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 5px;
+  box-sizing: border-box;
+  padding-left: 10px;
+  background: rgb(255, 255, 255);
+  color: #c4c4c4;
+}
+
+b .login_form_input{
+  height: 2.8em;
+  width: 93%;
+  border: none;
+  border-radius: 0px 5px 5px 0px;
+}
+
+b .login_form_input::placeholder{
+  padding: none;
+}
+
+.login_form_input[type="submit"]{
+  height: 2.8em;
+  border: none;
+  cursor: pointer;
+  background: #E02B45;
+  color: #fff;
+  border-radius: 5px;
+}
+
 .login_form_label{
-
-font-family: 'Inter';
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 24px;
-/* identical to box height, or 150% */
-
-
-color: #012A4A;
-}
-.login_form_a {
-  font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 24px;
-/* identical to box height, or 150% */
-/* display: block; */
-/* background-color: #E02B45; */
-text-decoration: none;
-color: #4285F4;
-}
-.login_form_p {
-  width: 300px;
-height: 24px;
-
-font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 24px;
-/* identical to box height, or 150% */
-
-
-color: #012A4A;
-
-
-/* Inside auto layout */
-
-flex: none;
-order: 1;
-flex-grow: 0;
+  margin-bottom: 5px;
 }
 
-.login_password_icon {
-    position: relative;
-    bottom: -7%;
-    left: 2%;
-  }
+.login_form_a{
+  margin-bottom: 20px;
+}
+.login_form_p{
+  margin-top: 10px;
+}
 
 .login_form_p a{
+  color: #E02B45;
   text-decoration: none;
-  color: #F00;
-}
-@media (max-width: 1000px) {
-  .login_divContainer {
-    flex-direction: column;
-  }
-  .login_navlinks, .login_navlinks1 {
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    text-align: center;
-    transition: all 0.login_5s;
-    right: -100%;
-    background: #222831;
-  }
-
-  .login_navlinks li, .login_navlinks1 li {
-    display: block;
-  }
-
-  .login_navlinks li a {
-    font-size: 20px;
-  }
-
-  .login_navlinks li a:hover {
-    border-bottom: none;
-  }
-
-  .login_menu-btn {
-    display: block;
-  }
-
-  #check:checked ~ .login_navlinks {
-    right: 0;
-  }
 }
 
-@media (max-width: 600px) {
-  .login_logo {
-    margin-left: 10px;
-    font-size: 25px;
-  }
+.login_form_a a{
+  color: #4285F4;
+  text-decoration: none;
+}
 
-  .login_menu-btn {
-    margin-right: 10px;
-    font-size: 25px;
-  }
+.login_form_a, .login_form_p{
+  font-size: 12px;
+}
 
-  .login_menu-btn:focus {
-    color: blue;
-  }
-  .login_form_image {
+
+@media screen and (max-width: 800px){
+
+  .login_form_data_container{
     display: none;
   }
-  .login_form_data_container{
+
+  .login_form_ctainer, .login_form{
     width: 100%;
-    flex-direction: column;
-    height: auto;
   }
-  .login_form {
-    width: 100%;
-    height: 70vh;
-  }
-  .login_f_section{
-    height: 80vh;
-  }
+
 }
