--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -7,11 +7,11 @@
   overflow: hidden;
 
 }
-body{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+
+.mainimage{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 
 .ImageContainer {
@@ -27,7 +27,7 @@ body{
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  opacity: 0.5;
+  opacity: 0.8;
 }
 
 .mainText {
@@ -40,16 +40,25 @@ body{
   width: 100%;
 
   align-items: center;
+  /* justify-content: center; */
+  /* text-align: center; */
+}
+
+.maintexttogether{
+  display: flex;
+  gap: 4rem;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
   text-align: center;
 }
 
 .hero_h1 {
   color: white;
-  font-size: 4.13rem;
+  font-size: 4.2rem;
   font-weight: 700;
   width: 70%;
-  line-height: 71.54px;
+  /* line-height: 71.54px; */
 
 }
 
@@ -57,9 +66,10 @@ body{
   position: absolute;
   font-weight: 400;
   color: white;
-  text-align: center;
+  width: 100%;
   font-size: 1.5rem;
-  margin-top: 9rem;
+  /* text-align: center; */
+  margin-top: 16rem;
 }
 
 .buttondiv {
@@ -96,3 +106,25 @@ body{
   cursor: pointer;
   background-color: transparent;
 }
+
+@media (max-width: 768px) {
+  .hero_h1 {
+    font-size: 3rem;
+    width: 100%;
+  }
+  .hero_p {
+    font-size: 1.2rem;
+  }
+  .buttondiv {
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+  }
+  .button1 {
+    padding: 0.8rem 0.8rem;
+  }
+  .button2 {
+    padding: 0.8rem 0.8rem;
+  }
+}
+
