--- a/src/App.css
+++ b/src/App.css
@@ -41,4 +41,26 @@
 }  */
 body {
   background-color: #E5E5E5;
+  font-family: "Inter", sans-serif !important;
+}
+input {
+  font-family: "Inter", sans-serif !important;
+}
+.pickup_table tr, td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #DDD;
+}
+
+.pickup_history_table {
+  background-color: #FFF;
+}
+.pickup_pagination {
+  margin-top : 1.03em;
+}
+.rider_hist_master{
+  position: relative;
+  background-color: #FFF;
+  width: 100%;
+  height: 100vh;
 }
