--- a/src/components/Navbar/DemoNav.css
+++ b/src/components/Navbar/DemoNav.css
@@ -1,4 +1,12 @@
-
+.demo_navbar  {
+  height: 80px;
+  background: #FFFFFF;
+  z-index: 5;
+  top: 0;
+  position: fixed!important;
+  width: 100vw;
+  border-bottom: #ef971b 1px solid;
+}
 .demo_container {
   max-width: 100%;
   margin: 0 50px;
@@ -37,19 +45,15 @@
 .nav-elements-span_sp:active {
     color: #E02B45;
 }
-.demo_navbar {
-  height: 80px;
-  background: #FFFFFF;
-  /* position: relative; */
-  /* margin-bottom: 120px; */
-  z-index: 5;
-  position: fixed;
-  width: 100%;
-}
 
 .demo_logo {
     display: flex;
     align-items: center;
+}
+.demo_logo_last {
+  width: 1.9em;
+  height: 1.9em;
+  border-radius: 100%;
 }
 .demo_logo span {
     margin-left: 5px;
@@ -66,6 +70,7 @@
   display: none;
 }
 .nav-elements {
+  margin-left: 4em;
 }
 
 .nav-elements ul {
@@ -92,7 +97,12 @@
     /* margin-left: 0px; */
     width: 190px;
 }
-
+.availability_m-r{
+  margin-right: 0.5em !important;
+}
+.availability_m-l{
+  margin-left: 0;
+}
 .nav-elements ul a {
     font-family: 'Inter';
     font-style: normal;
@@ -122,7 +132,7 @@
     width: 100px;
   }
   .li_mobile_l {
-    margin-left: 150px;
+    margin-left: 3rem;
   }
   .li_mobile_l_u {
     margin-left: 300px;
@@ -146,11 +156,11 @@
     }
     
   }
-  @media (max-width: 768px) {
+  /* @media (max-width: 768px) {
     .nav-elements ul li:not(:last-child) {
       margin-right: 30px;
     }
-  }
+  } */
   
   @media only screen and (max-width: 1100px) {
     .demo_menu-icon {
