--- a/src/components/RHistoryTable/RHistoryTable.css
+++ b/src/components/RHistoryTable/RHistoryTable.css
@@ -81,3 +81,41 @@
   border: 1px dotted rgba(220, 20, 60, 0.6);
   cursor: pointer;
 }
+.rider_hist_tr1 {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  color: #21334F;
+
+}
+.rHis_head{
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+  /* identical to box height */
+  color: #21334F;
+}
+.rHis_title_container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 0%;
+  margin: 0%;
+
+}
+.rHis_title {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.5em;
+  line-height: 1.89em;
+  width: 100%;
+  /* identical to box height */
+  color: #21334F;
+  margin:3%;
+  text-align: left !important;
+}
