--- a/src/pages/userDashboard/userDashboard.module.css
+++ b/src/pages/userDashboard/userDashboard.module.css
@@ -467,3 +467,36 @@
   /* .contacts_holder{
       margin-left:50px;
   } */
+
+  .chat_container_pa{
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    top: 90px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: absolute;
+    background-color: rgba(133, 124, 124, 0.44);
+    margin: auto;
+  }
+
+  /* #other {
+    justify-content: flex-end;
+  }
+  
+  #other .message-content {
+    justify-content: flex-end;
+    background-color: cornflowerblue;
+  }
+  
+  #other .message-meta {
+    justify-content: flex-end;
+    margin-right: 5px;
+  }
+  
+  .message-meta #author {
+    margin-left: 10px;
+    font-weight: bold;
+  } */
+  
