--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,69 +1,90 @@
-.footer{
+.footer {
     background-color: #303030;
-    padding: 2rem 8rem;
+    padding: 4rem 8rem;
     box-sizing: border-box;
-    width: 100%; 
+    max-width: 100%;
     display: flex;
     flex-direction: column;
 
 }
 
-.firstrow{
-    display: flex; 
+.firstrow {
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
- }
+}
 
- .secondrow{
-    display: flex; 
+.secondrow {
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
- }
+}
 
-.logocontainer{
+.logo {
     display: flex;
-    justify-content: center;
+    align-items: flex-start;
+    gap: 2rem;
+}
+
+.links {
+    display: flex;
     align-items: center;
-    gap: 0.4rem;
-}
-.logotext{
-   
-    margin-top: 35px;
-}
-
-.links{
-    display: flex;
-    align-items:center;
     gap: 2rem;
 }
 
-.icons{
+.icons {
     display: flex;
-    align-items:flex-end;
+    align-items: flex-end;
     gap: 2rem;
 }
 
-.footertitle{
+.footertitle {
     font-weight: 800;
-	font-size: 20px;
-    color: #FFFFFF; 
+    font-size: 20px;
+    color: #FFFFFF;
 }
 
-.cardTitle1{
+.cardTitle1 {
     font-size: 16px;
     font-weight: 700;
     color: #FFFFFF;
 }
-.cardTitle2{
+
+.cardTitle2 {
     font-size: 16px;
     font-weight: 400;
     color: #FFFFFF;
 }
 
-.copyright{
+.copyright {
     display: flex;
-    align-items:flex-start;
+    align-items: flex-start;
     gap: 2rem;
+}
+
+@media (max-width: 768px) {
+    .footer {
+        background-color: #303030;
+        padding: 4rem 0rem;
+        box-sizing: border-box;
+        max-width: 100%;
+        display: flex;
+        flex-direction: column;
+
+    }
+    .firstrow {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    .secondrow {
+        display: flex;
+        flex-direction: column;
+        /* justify-content: space-between; */
+        align-items: center;
+    }
 }
