--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,28 +1,23 @@
 .Container {
   height: 65vh;
-  width: 100%;
+  max-width: 100%;
   position: relative;
   margin: 0 auto;
   padding: 0;
   overflow: hidden;
 
 }
-body{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+
+.mainimage{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 
 .ImageContainer {
   height: 100%;
   width: 100%;
   object-fit: cover;
-}
-
-.HomeCpntCtner{
-  position: relative;
-  top: 80px;
 }
 
 .imageOverlay {
@@ -32,7 +27,7 @@ body{
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  opacity: 0.5;
+  opacity: 0.8;
 }
 
 .mainText {
@@ -42,7 +37,17 @@ body{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 90%;
+  width: 100%;
+
+  align-items: center;
+  /* justify-content: center; */
+  /* text-align: center; */
+}
+
+.maintexttogether{
+  display: flex;
+  gap: 4rem;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -50,10 +55,10 @@ body{
 
 .hero_h1 {
   color: white;
-  font-size: 4.13rem;
+  font-size: 4.2rem;
   font-weight: 700;
   width: 70%;
-  line-height: 71.54px;
+  /* line-height: 71.54px; */
 
 }
 
@@ -61,9 +66,10 @@ body{
   position: absolute;
   font-weight: 400;
   color: white;
-  text-align: center;
+  width: 100%;
   font-size: 1.5rem;
-  margin-top: 4.5rem;
+  /* text-align: center; */
+  margin-top: 16rem;
 }
 
 .buttondiv {
@@ -71,7 +77,7 @@ body{
   flex-direction: row;
   justify-content: center;
   align-items: flex-start;
-  margin-top: 2rem;
+  margin-top: 3rem;
   gap: 1rem;
 }
 
@@ -81,22 +87,45 @@ body{
   color: rgb(255, 255, 255);
   padding: 1rem 2rem;
   text-align: center;
-  text-decoration: none;
   display: inline-block;
   font-size: 1rem;
   border-radius: 0.5rem;
   cursor: pointer;
+  text-decoration: none;
 }
 
 .button2 {
+  text-decoration: none;
   color: rgb(255, 255, 255);
   border: rgb(255, 255, 255) solid 1px;
   padding: 1rem 2rem;
   text-align: center;
-  text-decoration: none;
   display: inline-block;
   font-size: 1rem;
   border-radius: 0.5rem;
   cursor: pointer;
   background-color: transparent;
+}
+
+@media (max-width: 768px) {
+  .hero_h1 {
+    font-size: 3rem;
+    width: 100%;
+  }
+  .hero_p {
+    font-size: 1.2rem;
+    margin-top: 11em;
+  }
+  .buttondiv {
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+    margin-top: 4em;
+  }
+  .button1 {
+    padding: 0.8rem 0.8rem;
+  }
+  .button2 {
+    padding: 0.8rem 0.8rem;
+  }
 }
