--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -1,13 +1,19 @@
-.servicesContainer{
+.servicesContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center; 
+    justify-content: center;
     padding: 50px 0;
+    width: 90%;
+}
+.client{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     width: 100%;
 }
-
-.container{
+.services-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,7 +22,7 @@
     margin: 0 auto;
 }
 
-h1.services_h1{
+.services-container h1 {
     font-size: 2.5rem;
     font-weight: 700;
     color: #e02b45;
@@ -24,111 +30,197 @@ h1.services_h1{
     margin-bottom: 2rem;
 }
 
-p.services_p{
+.services-container p {
     font-size: 1.125rem;
     font-weight: 400;
     color: #21334F;
     text-align: center;
-    font-size: 1.0rem;
-    line-height: 1.5;
+    font-size: 1.5rem;
     max-width: 66rem;
     line-height: 1.2;
 }
 
-.grid{
-display: flex;
-flex-direction: column;
-margin-bottom: 5rem;
-gap: 3rem;
+.services-grid {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 5rem;
+    gap: 3rem;
+    max-width: 100%;
 }
 
-.column{
+.column {
     display: flex;
     align-items: center;
-    width: 100%;
-    max-width: 80%;
+    max-width: 90%;
     margin: 0 auto;
     text-align: center;
 }
-.column1{
+
+.column1 {
     display: flex;
     align-items: center;
     gap: 1rem;
-    width: 100%;
-    max-width: 80%;
+    max-width: 100%;
     margin: 0 auto;
     text-align: center;
 }
 
-.card{
+.services-card {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 500px;
-    height: 500px;
+    width: 400px;
+    height: 400px;
     margin: 0 auto;
-    padding: 0 2rem;
+    padding: 2rem;
     text-align: center;
-    border:  2px solid #D9D9D9;
-    gap: 2rem ;
+    border: 2px solid #D9D9D9;
 }
 
-.cardTitle{
+.cardTitle {
     font-size: 1.5rem;
     font-weight: 700;
     color: #21334F;
-    /* margin-bottom: 1rem; */
+    margin-bottom: 1rem;
 }
 
-.qualityriders{
+.cardText {
+    font-size: 1.2rem;
+}
+
+.qualityriders {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    padding: 30px ;
-    gap: 3rem;
+    /* padding:  ; */
+    gap: 4rem;
     background-color: rgba(0, 0, 0, 0.04);
     width: 100%;
-    height: 30rem;
-    margin: 0 auto;
-}
-
-.riderText{
-    display: flex;
-    flex-direction: column;
-     width: 40%;
+    height: auto;
     /* margin: 0 auto; */
 }
 
-.clientCard{
+.riderImage {
+    /* max-width: 100%; */
+    margin: 0%;
+
+}
+
+.riderimg {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.riderText {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    /* margin: 0 auto; */
+}
+
+.clientCard {
+    gap: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 500px;
-    height: 500px;
+    width: 400px;
+    height: 400px;
     margin: 0 auto;
-    padding: 40px 24px;
+    padding: 2rem;
     text-align: center;
-    border:   1px solid #D9D9D9;
+    border: 1px solid #D9D9D9;
 }
 
-.imageCircle{
+.imageCircle {
     height: 40px;
     width: 40px;
     border-radius: 50%;
-    margin-bottom: 4rem;
+
 }
 
-.clientText{
-margin: 5rem 3rem;
+.clientText {
+    margin: 5rem 3rem;
 }
 
-.textStars{
+.textStars {
     display: flex;
     flex-direction: row;
     align-items: space-between;
     gap: 1rem;
-    margin-top: 3rem
+}
+
+@media (max-width: 768px) {
+    .column {
+        display: flex;
+        flex-direction: column;
+        max-width: 100%;
+    }
+    .column1 {
+        display: flex;
+        flex-direction: column;
+        max-width: 100%;
+        margin: 0 auto;
+    }
+    .clientCard{
+        gap: 1rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 80%;
+        height: 400px;
+    }
+
+    .services-card {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 400px;
+        height: 400px;
+        margin: 0 auto;
+        padding: 2rem;
+        text-align: center;
+        border: 2px solid #D9D9D9;
+    }
+
+    .qualityriders {
+        display: flex;
+        /* justify-content: center; */
+        /* align-items: center; */
+        flex-direction: column;
+        /* padding: 2rem ; */
+        gap: 3rem;
+        background-color: rgba(0, 0, 0, 0.04);
+        max-width: 100%;
+        height: 60rem;
+        margin: 0 auto;
+    }
+
+    .servicesContainer{
+        font-weight: 700;
+        max-width: 80%;
+    }
+    .riderImage {
+        /* max-width: 100%; */
+        margin: 0%;
+
+    }
+
+    .riderText {
+        width: 80%;
+        /* margin: 0 auto; */
+    }
+
+    .clientText {
+       width: 100%;
+       display: flex;
+       flex-direction: column;
+       justify-content: center;
+       margin: 3rem auto;
+    }
 }
