--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -74,6 +74,7 @@
     height: 400px;
     margin: 0 auto;
     padding: 2rem;
+    background-color: #FFF;
     text-align: center;
     border: 2px solid #D9D9D9;
 }
@@ -132,6 +133,7 @@
     margin: 0 auto;
     padding: 2rem;
     text-align: center;
+    background: #FFF;
     border: 1px solid #D9D9D9;
 }
 
